# vgnc-internal-orm

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_NEXT_STEPS.md  COVERAGE_STATUS_UPDATE.md  LICENSE  Makefile  README.md  alembic.ini  coverage.json  load_test_runner.py  main.py  pyproject.toml  release-notes.md  simple_load_test.py  test-summary.md  test_config_implementation.py
.github/: semantic-release-config.json
.github/scripts/: analyze_commits.py  bump_version.py  check_coverage_threshold.py  check_coverage_thresholds.py  compare_coverage.py  determine_version_bump.py  generate_coverage_badge.py  generate_coverage_summary.py  generate_dev_feedback.py  generate_release_notes.py  generate_test_summary.py  intelligent_commit_analyzer.py  migration_workflow.py  simple_load_test.py  update_changelog.py  update_version.py  update_version_references.py
.github/workflows/: README.md  ci.yml  coverage.yml  development.yml  docs.yml  pages.yml  release.yml
alembic/: README  env.py
alembic/versions/: 2025_11_05_2253-2299f7d46a8d_initial_baseline.py  2025_11_11_1648-39a962ee2c82_add_scientific_common_name_columns.py
docs/: Makefile  PRD.md  advanced_topics.md  alembic_baseline.md  api_reference.md  architecture_overview.md  ci_cd_pipeline.md  cli.md  code_coverage.md  conf.py  configuration.md  examples.md  getting_started.md  incremental_migrations.md  index.md  load_testing.md  loading_strategy_analysis.md  many_to_many_relationships_implementation.md  migration_workflow.md  migrations_safety.md  models_reference.md  mysql_integration_testing.md  navigation_and_loading_tests.md  performance_testing.md  query_performance_optimization.md  sessions.md  testing_and_performance.md  utilities.md
docs/api/: cli.rst  config.rst  index.rst  migrations.rst  models.rst  sessions.rst  utils.rst
examples/: README.md  basic_async.py  basic_sync.py  full_text_search_demo.py  query_optimization_demo.py  test_migration_safety.py
scripts/: migration_workflow.py  simple_load_test.py
src/vgnc_internal_orm/: __init__.py
src/vgnc_internal_orm/cli/: __init__.py  main.py
src/vgnc_internal_orm/config/: __init__.py  settings.py
src/vgnc_internal_orm/migrations/: __init__.py  safety.py
src/vgnc_internal_orm/models/: __init__.py  assembly.py  associations.py  base.py  chromosomes.py  (+4 more)
tests/: __init__.py  conftest.py  test_alembic_baseline.py  test_cli.py  test_incremental_migrations.py  test_migration_safety.py
tests/integration/: __init__.py  conftest.py  test_assembly_database_comprehensive.py  test_basemodel_database_comprehensive.py  test_basemodel_integration_focused.py  test_basemodel_real_database.py  test_basemodel_relationships.py  test_chromosomes_database_comprehensive.py  test_cli_commands.py  test_cli_database_comprehensive.py  test_cli_database_integrated.py  test_cli_integration_focused.py  test_cli_main_working.py  test_cli_real_database.py  test_cli_workflows.py  test_comprehensive_navigation.py  test_config_database_integrated.py  test_config_edge_cases.py  test_config_loading.py  test_config_real_database.py  test_config_settings_simple.py  test_config_settings_working.py  test_crud_operations.py  test_db_common_smoke.py  test_genefam_database_comprehensive.py  test_index_mapping.py  test_loading_strategies.py  test_many_to_many_relationships.py  test_models_base_functional.py  test_models_base_simple.py  test_models_base_working.py  test_mysql_features.py  test_mysql_integration.py  test_mysql_integration_simple.py  test_orthology_database_comprehensive.py  test_query_performance.py  test_query_performance_simple.py  test_session_integration.py  test_sessions_factory_comprehensive.py  test_sessions_factory_working.py  (+4 more)
tests/load/: conftest.py  test_concurrent_queries.py
tests/performance/: conftest.py  test_model_performance.py  test_mysql_performance.py  test_query_performance.py
tests/unit/: __init__.py  base_test.py  test_base_model.py  test_base_model_coverage.py  test_basemodel_functions.py  test_basemodel_implementation.py  test_basemodel_working.py  test_chromosome_assembly_models.py  test_cli_coverage.py  test_cli_fixed.py  test_cli_functions.py  test_cli_implementation.py  test_cli_working.py  test_config.py  test_config_dbcommon_migration.py  test_fulltext_search.py  test_genefam_species_models.py  test_generate_coverage_badge.py  test_models_comprehensive.py  test_models_simple.py  test_mysql_features.py  test_postgres_driver.py  test_query_helpers.py  test_session_factory.py  test_session_factory_simple.py  test_session_manager.py  test_settings_coverage.py  test_sqlalchemy_integration.py  test_timestamp_mixin_consolidated.py  test_unit_framework.py
(+10 files in other folders)
