[project]
name = "vgnc-internal-orm"
version = "0.4.4"
description = "Internal ORM library for VGNC database operations with SQLAlchemy and Pydantic integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HGNC Development Team", email = "hgnc@genenames.org"}
]
keywords = ["orm", "sqlalchemy", "pydantic", "database", "vgnc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
    "click>=8.3.0",
    "pymysql>=1.1.2",
    "defusedxml>=0.7.0",
    "aiomysql>=0.3.2",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
    "testcontainers>=3.7.0",
    "pytest-benchmark>=4.0.0",
    "PyYAML>=6.0.0",
]
mysql = [
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
]
performance = [
    "pytest-benchmark[histogram]>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/HGNC/vgnc-internal-orm"
Documentation = "https://github.com/HGNC/vgnc-internal-orm/tree/main/docs"
Repository = "https://github.com/HGNC/vgnc-internal-orm.git"
"Bug Tracker" = "https://github.com/HGNC/vgnc-internal-orm/issues"

[project.scripts]
vgnc-cli = "vgnc_internal_orm.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgnc_internal_orm"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.lint.isort]
known-third-party = ["sqlalchemy", "pydantic", "alembic"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "psycopg2.*",
    "asyncpg.*",
    "factory_boy.*",
    "faker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config -W ignore::DeprecationWarning -W ignore::sqlalchemy.exc.SAWarning -W ignore::UserWarning"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
parallel = true
concurrency = ["thread"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "mysql-connector-python>=9.5.0",
    "myst-parser>=4.0.1",
    "pytest-benchmark>=5.2.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "testcontainers>=4.13.2",
]
